--- a/PWMB_ENTREGAS/PWNB-Semana#03/HTML/main.html
+++ b/PWMB_ENTREGAS/PWNB-Semana#03/HTML/main.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<div>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-</head>
+</div>
 
 <body>
 
-    <div id="conteudo">
+    <div>
         <h1>Bem vindo a VisionTech</h2>
         <img src="/visiontech.Imagem.png" alt="">
     </div>
 
-    <div id="Login">
+    <div>
         <h2>Login</h2>
         <form action="processar_login.php" method="post">
             <label for="username">Usuário:</label>
