--- a/PWMB_ENTREGAS/PWNB-Semana#03/HTML/index.html
+++ b/PWMB_ENTREGAS/PWNB-Semana#03/HTML/index.html
@@ -3,17 +3,17 @@
 </head>
 <body>
      <!-- Container--> 
-    <div class="principal">
-        <header>
+    <div>
+        <div>
 			<p>A VisionTech, é uma empresa de consultoria estratégica que atua em diversos setores, desde saúde até tecnologia. 
                 Diante da crescente complexidade dos dados gerados por suas operações e seus clientes, a VisionTech, está 
                 procurando uma ferramenta de análise de dados de negócios para otimizar suas estratégias e fornecer um valor 
                 ainda maior aos seus clientes.</p>
-		</header>
+            </div>
 
 
 
-        <div id="menu">
+        <div>
             <ul>
                 <li><a href="#">Página Inicial</a></li>
                 <li><a href="#">Sobre</a></li>
@@ -22,16 +22,16 @@
             </ul>
         </div>
 
-        <section>
+        <div>
             <img src="/visiontech.Imagem.png" alt="">
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio sit sequi exercitationem excepturi, porro ipsum.
              Suscipit quae ipsam atque dolor fugit doloribus ea accusamus, officiis tempora molestias officia voluptatem corrupti!</p>
-		</section>
+            </div>
 
      <!-- Rodapé--> 
-        <footer>
+        <div>
             <div class="parte1"><p>Rodapé-parte 1</p></div>
-        </footer>
+        </div>
     </div>
 
 </body>
